--- a/templates/index.html
+++ b/templates/index.html
@@ -2,6 +2,6 @@
 
 {% block content %}
 <script>
-    window.location.href = "{{ url_for('login') }}";
+    window.location.href = "{{ url_for('home') }}";
 </script>
 {% endblock %}
